Refactored task animation from translate to margin, to prevent whitespace

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,9 @@ a {
 .content {
     width: 95%;
     margin: auto;
-    min-height: 100vh;
+    @include screen(lg) {
+        min-height: 100vh;
+    }
 }
 
 .spacer {
