--- a/src/components/DateForm/DateForm.scss
+++ b/src/components/DateForm/DateForm.scss
@@ -1,1 +1,10 @@
 @import "../../utils/variables";
+
+.date-form {
+    height: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0.5rem;
+    margin-bottom: 1rem;
+}
